RESOLVED FIXED54208
Double-clicking locations of assertions/logs in Visual Studio's Output Window does nothing
https://bugs.webkit.org/show_bug.cgi?id=54208
Summary Double-clicking locations of assertions/logs in Visual Studio's Output Window...
Adam Roben (:aroben)
Reported 2011-02-10 07:31:41 PST
Double-clicking locations of assertions/logs in Visual Studio's Output Window does nothing
Attachments
Patch (1.89 KB, patch)
2011-02-10 07:32 PST, Adam Roben (:aroben)
ap: review+
Adam Roben (:aroben)
Comment 1 2011-02-10 07:32:57 PST
Alexey Proskuryakov
Comment 2 2011-02-10 09:12:39 PST
Comment on attachment 81979 [details] Patch What is the reason for having two printf_stderr_common formats? Could you change the existing one and keep it at two code paths instead of three? If three are needed, a comment is probably in order.
Adam Roben (:aroben)
Comment 3 2011-02-10 09:38:32 PST
(In reply to comment #2) > (From update of attachment 81979 [details]) > What is the reason for having two printf_stderr_common formats? Could you change the existing one and keep it at two code paths instead of three? > > If three are needed, a comment is probably in order. I was just trying to be conservative and not change the format for non-Windows platforms. But I can easily change it for all platforms if you thinks that's better.
Alexey Proskuryakov
Comment 4 2011-02-10 10:05:56 PST
I don't know. Maybe change it, and thus make whoever cares about the old format complain and actually add a comment explaining why this format was chosen? You could also check svn history and talk to the author.
Adam Roben (:aroben)
Comment 5 2011-02-10 10:25:17 PST
(In reply to comment #4) > I don't know. Maybe change it, and thus make whoever cares about the old format complain and actually add a comment explaining why this format was chosen? You could also check svn history and talk to the author. Here are the changes to the format I can find: <http://trac.webkit.org/changeset/1271#file3> Ken Kocienda added stderr output on assertions with the "file:line function" format. <http://trac.webkit.org/changeset/1339#file3> Ken Kocienda added the "=======" lines and uppercased "assertion failure" <http://trac.webkit.org/changeset/1403#file12> Darin Adler added the parentheses around the location. <http://trac.webkit.org/changeset/16782#file1> Darin Adler removed the "=======" lines and added the call to _CrtDbgReport, which uses its own format. Seems likely we can just change it and see who (if anyone) complains.
Adam Roben (:aroben)
Comment 6 2011-02-10 11:27:39 PST
Note You need to log in before you can comment on or make changes to this bug.