Print locations of assertions and logs in a way that Visual Studio understands

With this change, double-clicking one of these locations in Visual Studio's Output Window
will focus that line of code in the editor.

Fixes <http://webkit.org/b/54208> Double-clicking locations of assertions/logs in Visual
Studio's Output Window does nothing

Reviewed by Alexey Proskuryakov.

* wtf/Assertions.cpp:
(printCallSite): Use OS(WINDOWS) instead of the meaningless OS(WIN). When we aren't using
the debug CRT (and thus can't call _CrtDbgReport), print the file and line number using the
same format that cl.exe uses when it prints compiler errors.

Canonical link: https://commits.webkit.org/68262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78250 268f45cc-cd09-0410-ab3c-d52691b4dbfc